Switch from direct ClientDependency references to Suppliers